# _pathroot

./: .gitignore  ABI-FFI-SYMLINKS.md  CHANGELOG.md  CITATION.cff  ECOSYSTEM.scm  META.scm  PROGRESS-PHASE-1.md  README.adoc  README.md  RELEASE-NOTES-1.0.0.md  ROADMAP.adoc  ROADMAP.md  STATE.scm  codemeta.json  copilot-instructions.md  deno.json  flake.nix  opsm.toml  rescript.json  rsr-adapter.adb
.github/workflows/: jekyll.yml  ts-blocker.yml  wellknown-enforcement.yml
ada/tui/: pathroot_tui.gpr
docs/: pathroot-guide.adoc
examples/: sample-mustfile.toml
ffi/zig/: build.zig
ffi/zig/src/: symlink.zig
libs/ada-path-environment/: README.adoc  alire.toml  path_environment.gpr
libs/ada-symlink-manager/: README.adoc  alire.toml  symlink_manager.gpr
libs/ada-terminal-ansi/: README.adoc  alire.toml  terminal_ansi.gpr
rust/mustfile-orchestrator/: Cargo.toml
rust/mustfile-orchestrator/src/: executor.rs  lib.rs  parser.rs  platform.rs  types.rs
scripts/: bootstrap.sh  bundle-nicaug.js  detect-shell.sh  test-shells.jl  test-shells.sh
scripts/all-shells/: README.adoc  SHELLS.txt
scripts/posix/: pathroot.sh
scripts/windows/: automkdir.bat  envbase.ps1
src/: DenoBindings.res  Discovery.res  Envbase.res  Mod.res  Types.res  Validate.res  discovery.ts  envbase.ts  mod.ts  types.ts  validate.ts
src/abi/: Symlink.idr  SymlinkTypes.idr
src/nicaug/: NicaugCLI.res  NickelParser.res  NickelTypes.res  PlatformOrchestrator.res
wiki/: Core-Concepts.md  Directory-Structure.md  FAQ.md  Home.md  Integration.md  Introduction.md  Scripts-Reference.md  TUI-Guide.md
(+53 files in other folders)
