# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "mustfile_orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "Mustfile orchestration engine for _pathroot"
license = "PMPL-1.0-or-later"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "mustorch"
path = "src/bin/mustorch.rs"
